# autom8-calendar-integration

./: .gitignore  client_secret.json.secret  pyproject.toml  token.pkl
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
autom8_calendar_integration/: __init__.py  calendar.py
tests/: test_autom8_calendar_integration.py  test_calendar.py
