[tool.poetry]
name = "autom8-calendar-integration"
version = "0.1.0"
description = ""
authors = ["hermansen <hermansendev@gmail.com>"]

[tool.poetry.scripts]
init = "autom8_calendar_integration:init"

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.761"
google-api = "^0.1.12"
google-api-python-client = "^1.7.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
